# Plurk-Downloader

./: .gitignore  0803_test.ipynb  Dockerfile  README.md  app.py  home.py  plurk_request_test.ipynb  plurk_test.md  pyproject.toml  requirements.txt  vercel.json  說明.md
api/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/.deta/: prog_info  state
api/application/controller/: app.py
api/application/form/: __init__.py  extract_request.py
api/config/: config.py
api/config/secrets/: PLURK_API_KEY.example
api/infrastructure/coder/: conver_table.py
api/infrastructure/plurk/: plurk_api.py
api/model/: plurk.py
api/plurk_downloader/: main.py
api/plurk_downloader/config/: .env  config.py
app/: .editorconfig  .env.development  .eslintrc.json  .eslintrc.yml  .gitignore  .pnp.cjs  README.md  next.config.js  package.json  tailwind.config.js
app/.husky/: pre-commit
app/src/components/: Card.tsx  ExtLink.tsx  Footer.tsx  Layout.tsx  Navbar.tsx  Section.tsx  SubSection.tsx
app/src/pages/: _app.tsx  _document.tsx  index.tsx  markdown.tsx
app/src/styles/: global.css
app/src/utils/: api.ts
functions/: crawl.py
script/: script.js
server/: api.md  app.py  home.py  requirements.txt
server/functions/: crawl.py
server/static/script/: FileSaver.min.js  index_en.js  index_tw.js  (+1 more)
server/templates/: download.html  index.html
static/script/: index.js
static/style/: download.css  index.css
template/: index.html
templates/: base.html  basic_frame.html  download.html  index.html
test_website/: plurk.html  post.js  style.css
(+46 files in other folders)
