[tool.poetry]
name = "plurk-downloader"
version = "0.0.1"
description = "A helper app that transform a plurk into markdown format for easy-storing."
authors = ["cloude <boxbox557@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
plurk-oauth = "^0.9.2"
pydantic = "^1.9.1"
SnakeMD = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
